# lette

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
config/: base.toml
migrations/: 20240408130424_create_tables.down.sql  20240408130424_create_tables.up.sql
src/: conf.rs  error.rs  lib.rs  log.rs  main.rs
src/api/: error.rs  healthcheck.rs  mod.rs  v1.rs
src/cmd/: db.rs  mod.rs  serve.rs
src/entity/: user.rs
src/handler/: mod.rs
src/repository/: user.rs
src/router/: mod.rs
src/util/: hash.rs
