[package]
name = "lette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "lette"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono"] }
config = "0.14.0"
chrono = { version = "0.4.37", features = ["serde"] }
thiserror = "1.0.58"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.0"
